General Style and Html layout
images added and the style is almost done!

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,11 +8,22 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <section>
+        <img src="IMG/backg.jpg" alt="" id="bg">
+        <img src="IMG/moon.png" alt="" id="moon">
+        <img src="IMG/mountain.png" alt="" id="mountain">
+        <img src="IMG/road.png" alt="" id="road">
+        <h2 id="text">Moon Light</h2>
+    </section>
 
 
-<!-- JS -->
+
+
+
+    <!-- JS -->
     <script src="script.js"></script>
 </body>
+
 </html>
